change RoBERTa eval for RoCAUC

--- a/classifier/nn/bert_base_cased_eval.ipynb
+++ b/classifier/nn/bert_base_cased_eval.ipynb
@@ -66,7 +66,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "myclassifier = TextClassificationPipeline(model=model, tokenizer=tokenizer, truncation=True,  max_length=500, device=1, batch_size=128)"
+    "myclassifier = TextClassificationPipeline(model=model, tokenizer=tokenizer, truncation=True,  max_length=500, device=1, batch_size=128, return_all_scores=True)"
    ]
   },
   {
@@ -146,6 +146,68 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'label': 'LABEL_0', 'score': 0.20455271005630493},\n",
+       " {'label': 'LABEL_1', 'score': 0.7814079523086548},\n",
+       " {'label': 'LABEL_2', 'score': 0.014039336703717709}]"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "results[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.7814079523086548"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "results[0][1]['score']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.9999999990686774"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "0.20455271005630493 + 0.7814079523086548 + 0.014039336703717709"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 9,
    "metadata": {},
    "outputs": [],
@@ -156,22 +218,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
     "for i, j in test.iterrows():\n",
-    "    test.at[i, 'pred_1'] = np.int64(results[i]['label'][-1])\n",
-    "    test.at[i, 'conf_1'] = results[i]['score']"
+    "    test.at[i, 'conf_0'] = results[i][0]['score']\n",
+    "    test.at[i, 'conf_1'] = results[i][1]['score']\n",
+    "    test.at[i, 'conf_2'] = results[i][2]['score']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
-    "test.to_csv('../../../Files/Submissions/train/Roberta_C2_v2.csv', sep='|')"
+    "test.to_csv('../../../Files/Submissions/train/Roberta_C2_v3.csv', sep='|')"
    ]
   },
   {
