--- a/classifier/explainable/linreg.ipynb
+++ b/classifier/explainable/linreg.ipynb
@@ -15,16 +15,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "target = 'label'\n",
     "input_column = 'cleanText'\n",
     "\n",
-    "train_data = pd.read_csv('../../../Files/Submissions/train/train1.csv', sep='|') \n",
+    "train_data = pd.read_csv('../../../Files/Submissions/train/train1_v2.csv', sep='|') \n",
     "# valid_data = pd.read_pickle('../../../Files/Submissions/train/val_split_submission.pickle')\n",
-    "test_data = pd.read_csv('../../../Files/Submissions/train/test1.csv', sep='|')\n",
+    "test_data = pd.read_csv('../../../Files/Submissions/train/test1_v2.csv', sep='|')\n",
     "\n",
     "train_data = train_data[[target, input_column]]\n",
     "# valid_data = valid_data[[target, input_column]]\n",
@@ -88,16 +88,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([0., 1.])"
+       "array([1., 0.])"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -126,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -135,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -144,16 +144,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "2939"
+       "3682"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -164,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -187,7 +187,7 @@
        "LogisticRegression(random_state=42)"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -198,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -207,16 +207,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(368, 88)"
+       "(2585, 78)"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -227,16 +227,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(368,)"
+       "(2585,)"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -247,11 +247,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
-    "y_pred.tofile('../../../Files/models/lr_pred.csv', sep='\\n')"
+    "y_pred.tofile('../../../Files/models/lr_pred_v2.csv', sep='\\n')"
    ]
   },
   {
@@ -260,7 +260,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "test_labels.to_csv('../../../Files/models/y_true.csv', sep='\\n', index=False)"
+    "test_labels.to_csv('../../../Files/models/y_true_v2.csv', sep='\\n', index=False)"
    ]
   }
  ],
