--- a/classifier/explainable/xgboost_test.ipynb
+++ b/classifier/explainable/xgboost_test.ipynb
@@ -667,6 +667,38 @@
       "Setup completed, training now\n",
       "Fitting 5 folds for each of 1080 candidates, totalling 5400 fits\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "GridSearchCV(estimator=XGBClassifier(base_score=None, booster=None,\n",
+       "                                     callbacks=None, colsample_bylevel=None,\n",
+       "                                     colsample_bynode=None,\n",
+       "                                     colsample_bytree=None,\n",
+       "                                     early_stopping_rounds=None,\n",
+       "                                     enable_categorical=False, eval_metric=None,\n",
+       "                                     gamma=None, gpu_id=None, grow_policy=None,\n",
+       "                                     importance_type=None,\n",
+       "                                     interaction_constraints=None,\n",
+       "                                     learning_rate=None, max_bin=None,\n",
+       "                                     max_cat_to_...\n",
+       "                                     n_estimators=100, n_jobs=None,\n",
+       "                                     num_parallel_tree=None, predictor=None,\n",
+       "                                     random_state=None, reg_alpha=None,\n",
+       "                                     reg_lambda=None, ...),\n",
+       "             n_jobs=10,\n",
+       "             param_grid={'colsample_bytree': [0.5, 0.7, 1],\n",
+       "                         'gamma': [0.1, 0.5, 1, 2, 5],\n",
+       "                         'learning_rate': [0.01, 0.05, 0.1],\n",
+       "                         'max_depth': [2, 3, 4, 5, 6, 7],\n",
+       "                         'n_estimators': [100, 500, 1000, 2000],\n",
+       "                         'num_class': [2], 'objective': ['multi:softprob']},\n",
+       "             scoring='roc_auc_ovo', verbose=1)"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -697,7 +729,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -706,36 +738,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['xgbCVGridSearchC1_2.joblib']"
+       "['xgbCVGridSearchC1_3.joblib']"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "dump(clf, 'xgbCVGridSearchC1_2.joblib')"
+    "dump(clf, 'xgbCVGridSearchC1_3.joblib')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['xgbBest_CVC1_2.joblib']"
+       "['xgbBest_CVC1_3.joblib']"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -743,7 +775,7 @@
    "source": [
     "model = clf.best_estimator_\n",
     "\n",
-    "dump(model, 'xgbBest_CVC1_2.joblib') "
+    "dump(model, 'xgbBest_CVC1_3.joblib') "
    ]
   },
   {
@@ -755,7 +787,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -764,7 +796,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -793,12 +825,11 @@
        "      <th>mean_score_time</th>\n",
        "      <th>std_score_time</th>\n",
        "      <th>param_colsample_bytree</th>\n",
-       "      <th>param_eval_metric</th>\n",
        "      <th>param_gamma</th>\n",
        "      <th>param_learning_rate</th>\n",
        "      <th>param_max_depth</th>\n",
        "      <th>param_n_estimators</th>\n",
-       "      <th>...</th>\n",
+       "      <th>param_num_class</th>\n",
        "      <th>param_objective</th>\n",
        "      <th>params</th>\n",
        "      <th>split0_test_score</th>\n",
@@ -813,87 +844,53 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>41</th>\n",
-       "      <td>20.123997</td>\n",
-       "      <td>0.055880</td>\n",
-       "      <td>0.045213</td>\n",
-       "      <td>0.009588</td>\n",
+       "      <th>61</th>\n",
+       "      <td>31.92091</td>\n",
+       "      <td>0.180993</td>\n",
+       "      <td>0.043928</td>\n",
+       "      <td>0.004642</td>\n",
        "      <td>0.5</td>\n",
-       "      <td>auc</td>\n",
        "      <td>0.1</td>\n",
        "      <td>0.1</td>\n",
-       "      <td>3</td>\n",
-       "      <td>1000</td>\n",
-       "      <td>...</td>\n",
+       "      <td>5</td>\n",
+       "      <td>500</td>\n",
+       "      <td>2</td>\n",
        "      <td>multi:softprob</td>\n",
-       "      <td>{'colsample_bytree': 0.5, 'eval_metric': 'auc'...</td>\n",
-       "      <td>0.924216</td>\n",
-       "      <td>0.913445</td>\n",
-       "      <td>0.906734</td>\n",
-       "      <td>0.942905</td>\n",
-       "      <td>0.939965</td>\n",
-       "      <td>0.925453</td>\n",
-       "      <td>0.014222</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>311</th>\n",
-       "      <td>19.170863</td>\n",
-       "      <td>0.074919</td>\n",
-       "      <td>0.033720</td>\n",
-       "      <td>0.002689</td>\n",
-       "      <td>0.5</td>\n",
-       "      <td>ams@0</td>\n",
-       "      <td>0.1</td>\n",
-       "      <td>0.1</td>\n",
-       "      <td>3</td>\n",
-       "      <td>1000</td>\n",
-       "      <td>...</td>\n",
-       "      <td>multi:softprob</td>\n",
-       "      <td>{'colsample_bytree': 0.5, 'eval_metric': 'ams@...</td>\n",
-       "      <td>0.924216</td>\n",
-       "      <td>0.913445</td>\n",
-       "      <td>0.906734</td>\n",
-       "      <td>0.942905</td>\n",
-       "      <td>0.939965</td>\n",
-       "      <td>0.925453</td>\n",
-       "      <td>0.014222</td>\n",
+       "      <td>{'colsample_bytree': 0.5, 'gamma': 0.1, 'learn...</td>\n",
+       "      <td>0.726565</td>\n",
+       "      <td>0.71223</td>\n",
+       "      <td>0.72245</td>\n",
+       "      <td>0.736947</td>\n",
+       "      <td>0.728121</td>\n",
+       "      <td>0.725263</td>\n",
+       "      <td>0.008052</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>2 rows × 21 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "     mean_fit_time  std_fit_time  mean_score_time  std_score_time  \\\n",
-       "41       20.123997      0.055880         0.045213        0.009588   \n",
-       "311      19.170863      0.074919         0.033720        0.002689   \n",
+       "    mean_fit_time  std_fit_time  mean_score_time  std_score_time  \\\n",
+       "61       31.92091      0.180993         0.043928        0.004642   \n",
        "\n",
-       "    param_colsample_bytree param_eval_metric param_gamma param_learning_rate  \\\n",
-       "41                     0.5               auc         0.1                 0.1   \n",
-       "311                    0.5             ams@0         0.1                 0.1   \n",
+       "   param_colsample_bytree param_gamma param_learning_rate param_max_depth  \\\n",
+       "61                    0.5         0.1                 0.1               5   \n",
        "\n",
-       "    param_max_depth param_n_estimators  ... param_objective  \\\n",
-       "41                3               1000  ...  multi:softprob   \n",
-       "311               3               1000  ...  multi:softprob   \n",
+       "   param_n_estimators param_num_class param_objective  \\\n",
+       "61                500               2  multi:softprob   \n",
        "\n",
-       "                                                params split0_test_score  \\\n",
-       "41   {'colsample_bytree': 0.5, 'eval_metric': 'auc'...          0.924216   \n",
-       "311  {'colsample_bytree': 0.5, 'eval_metric': 'ams@...          0.924216   \n",
+       "                                               params  split0_test_score  \\\n",
+       "61  {'colsample_bytree': 0.5, 'gamma': 0.1, 'learn...           0.726565   \n",
        "\n",
-       "     split1_test_score  split2_test_score  split3_test_score  \\\n",
-       "41            0.913445           0.906734           0.942905   \n",
-       "311           0.913445           0.906734           0.942905   \n",
+       "    split1_test_score  split2_test_score  split3_test_score  \\\n",
+       "61            0.71223            0.72245           0.736947   \n",
        "\n",
-       "     split4_test_score  mean_test_score  std_test_score  rank_test_score  \n",
-       "41            0.939965         0.925453        0.014222                1  \n",
-       "311           0.939965         0.925453        0.014222                1  \n",
-       "\n",
-       "[2 rows x 21 columns]"
+       "    split4_test_score  mean_test_score  std_test_score  rank_test_score  \n",
+       "61           0.728121         0.725263        0.008052                1  "
       ]
      },
-     "execution_count": 35,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -913,16 +910,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
-    "model = Gridsearch.best_estimator_"
+    "model = clf.best_estimator_"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -931,7 +928,7 @@
        "xgboost.sklearn.XGBClassifier"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -942,15 +939,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Best parameters: {'colsample_bytree': 0.5, 'learning_rate': 0.1, 'max_depth': 2, 'n_estimators': 1000, 'num_class': 2, 'objective': 'multi:softprob'}\n",
-      "Highest AUC:  0.9261966707035846\n"
+      "Best parameters: {'colsample_bytree': 0.5, 'gamma': 0.1, 'learning_rate': 0.1, 'max_depth': 5, 'n_estimators': 500, 'num_class': 2, 'objective': 'multi:softprob'}\n",
+      "Highest AUC:  0.725262733858856\n"
      ]
     }
    ],
@@ -1195,7 +1192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1213,11 +1210,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
-    "proba.tofile('../../../Files/models/xgb_proba.txt', sep=' ')"
+    "proba.tofile('../../../Files/models/xgb_proba_v3.txt', sep=' ')"
    ]
   },
   {
