--- a/classifier/nn/CNN.ipynb
+++ b/classifier/nn/CNN.ipynb
@@ -1007,13 +1007,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
     "from tensorflow import keras\n",
     "model = keras.models.load_model('../../../Files/models/CNN8-64.h5')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'tensorflow' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m/Users/jakobschlierf/Desktop/Master/Thesis/Github/classifier/nn/CNN.ipynb Cell 38\u001b[0m in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> <a href='vscode-notebook-cell:/Users/jakobschlierf/Desktop/Master/Thesis/Github/classifier/nn/CNN.ipynb#X62sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m tensorflow\u001b[39m.\u001b[39mversion\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'tensorflow' is not defined"
+     ]
+    }
+   ],
+   "source": []
   },
   {
    "cell_type": "code",
