getting actual C2 Data

--- a/analysis/initial_analysis.ipynb
+++ b/analysis/initial_analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -929,6 +929,488 @@
    "source": [
     "plt.hist(length, bins=20)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Eval classifier I"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.read_pickle('../../Files/Submissions/score/CoronavirusUS.pickle')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>author</th>\n",
+       "      <th>created_utc</th>\n",
+       "      <th>id</th>\n",
+       "      <th>num_comments</th>\n",
+       "      <th>permalink</th>\n",
+       "      <th>score</th>\n",
+       "      <th>selftext</th>\n",
+       "      <th>subreddit</th>\n",
+       "      <th>title</th>\n",
+       "      <th>url</th>\n",
+       "      <th>cleanTitle</th>\n",
+       "      <th>text</th>\n",
+       "      <th>cleanText</th>\n",
+       "      <th>conf_I</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>class_I</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0.0</th>\n",
+       "      <td>13024</td>\n",
+       "      <td>13024</td>\n",
+       "      <td>13024</td>\n",
+       "      <td>13024</td>\n",
+       "      <td>13024</td>\n",
+       "      <td>13024</td>\n",
+       "      <td>12917</td>\n",
+       "      <td>13024</td>\n",
+       "      <td>13024</td>\n",
+       "      <td>13024</td>\n",
+       "      <td>13024</td>\n",
+       "      <td>12917</td>\n",
+       "      <td>13024</td>\n",
+       "      <td>13024</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1.0</th>\n",
+       "      <td>32487</td>\n",
+       "      <td>32487</td>\n",
+       "      <td>32487</td>\n",
+       "      <td>32487</td>\n",
+       "      <td>32487</td>\n",
+       "      <td>32487</td>\n",
+       "      <td>32487</td>\n",
+       "      <td>32487</td>\n",
+       "      <td>32487</td>\n",
+       "      <td>32487</td>\n",
+       "      <td>32487</td>\n",
+       "      <td>32487</td>\n",
+       "      <td>32487</td>\n",
+       "      <td>32487</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         author  created_utc     id  num_comments  permalink  score  selftext  \\\n",
+       "class_I                                                                         \n",
+       "0.0       13024        13024  13024         13024      13024  13024     12917   \n",
+       "1.0       32487        32487  32487         32487      32487  32487     32487   \n",
+       "\n",
+       "         subreddit  title    url  cleanTitle   text  cleanText  conf_I  \n",
+       "class_I                                                                 \n",
+       "0.0          13024  13024  13024       13024  12917      13024   13024  \n",
+       "1.0          32487  32487  32487       32487  32487      32487   32487  "
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.groupby(by='class_I').count()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = df.groupby(['subreddit', 'class_I'], as_index=False).score.count()\n",
+    "df = df.pivot(index='subreddit',columns='class_I')\n",
+    "df.columns = df.columns.droplevel(0)\n",
+    "df = df.reset_index()\n",
+    "df.rename_axis('index', axis=1, inplace=True)\n",
+    "df.rename(columns={0.0: 'Non-Covid', 1.0: 'Covid'}, inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>author</th>\n",
+       "      <th>created_utc</th>\n",
+       "      <th>id</th>\n",
+       "      <th>num_comments</th>\n",
+       "      <th>permalink</th>\n",
+       "      <th>score</th>\n",
+       "      <th>selftext</th>\n",
+       "      <th>subreddit</th>\n",
+       "      <th>title</th>\n",
+       "      <th>url</th>\n",
+       "      <th>cleanTitle</th>\n",
+       "      <th>text</th>\n",
+       "      <th>cleanText</th>\n",
+       "      <th>class_I</th>\n",
+       "      <th>conf_I</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>milkandmayhem</td>\n",
+       "      <td>1609281329</td>\n",
+       "      <td>kmop5o</td>\n",
+       "      <td>3</td>\n",
+       "      <td>/r/CoronavirusUS/comments/kmop5o/1st_case_of_c...</td>\n",
+       "      <td>1</td>\n",
+       "      <td></td>\n",
+       "      <td>CoronavirusUS</td>\n",
+       "      <td>1st case of COVID variant discovered in Colorado</td>\n",
+       "      <td>https://www.kfyrtv.com/2020/12/29/1st-case-of-...</td>\n",
+       "      <td>case covid variant discovered colorado</td>\n",
+       "      <td>1st case of COVID variant discovered in Colorado</td>\n",
+       "      <td>[ num]st case covid variant discover colorado</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.999999</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>habichuelacondulce</td>\n",
+       "      <td>1609281279</td>\n",
+       "      <td>kmook1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>/r/CoronavirusUS/comments/kmook1/colorado_man_...</td>\n",
+       "      <td>1</td>\n",
+       "      <td></td>\n",
+       "      <td>CoronavirusUS</td>\n",
+       "      <td>Colorado man tests positive for more contagiou...</td>\n",
+       "      <td>https://abc7ny.com/covid-variant-new-uk-elbert...</td>\n",
+       "      <td>colorado man tests positive contagious variant...</td>\n",
+       "      <td>Colorado man tests positive for more contagiou...</td>\n",
+       "      <td>colorado man test positive contagious variant ...</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.999997</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Cowicide</td>\n",
+       "      <td>1609281157</td>\n",
+       "      <td>kmon5m</td>\n",
+       "      <td>6</td>\n",
+       "      <td>/r/CoronavirusUS/comments/kmon5m/republicans_i...</td>\n",
+       "      <td>1</td>\n",
+       "      <td></td>\n",
+       "      <td>CoronavirusUS</td>\n",
+       "      <td>Republicans including right-wing Weld county c...</td>\n",
+       "      <td>https://www.denverpost.com/2020/12/28/colorado...</td>\n",
+       "      <td>republicans including right wing weld county c...</td>\n",
+       "      <td>Republicans including right-wing Weld county c...</td>\n",
+       "      <td>republicans include rightwe weld county commis...</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.999827</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>hotdogsaremyfavorite</td>\n",
+       "      <td>1609280376</td>\n",
+       "      <td>kmoe28</td>\n",
+       "      <td>0</td>\n",
+       "      <td>/r/CoronavirusUS/comments/kmoe28/colorado_man_...</td>\n",
+       "      <td>1</td>\n",
+       "      <td></td>\n",
+       "      <td>CoronavirusUS</td>\n",
+       "      <td>Colorado man tests positive for more contagiou...</td>\n",
+       "      <td>https://coloradosun.com/2020/12/29/coronavirus...</td>\n",
+       "      <td>colorado man tests positive contagious variant...</td>\n",
+       "      <td>Colorado man tests positive for more contagiou...</td>\n",
+       "      <td>colorado man test positive contagious variant ...</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.999999</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>AcademicCold</td>\n",
+       "      <td>1609280082</td>\n",
+       "      <td>kmoaor</td>\n",
+       "      <td>0</td>\n",
+       "      <td>/r/CoronavirusUS/comments/kmoaor/coronavirus_u...</td>\n",
+       "      <td>1</td>\n",
+       "      <td></td>\n",
+       "      <td>CoronavirusUS</td>\n",
+       "      <td>Coronavirus UK variant detected in US for 1st ...</td>\n",
+       "      <td>https://abcnews.go.com/Health/coronavirus/live...</td>\n",
+       "      <td>coronavirus variant detected time</td>\n",
+       "      <td>Coronavirus UK variant detected in US for 1st ...</td>\n",
+       "      <td>coronavirus uk variant detect [ num]st time</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.999995</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                 author  created_utc      id  num_comments  \\\n",
+       "0         milkandmayhem   1609281329  kmop5o             3   \n",
+       "1    habichuelacondulce   1609281279  kmook1             1   \n",
+       "2              Cowicide   1609281157  kmon5m             6   \n",
+       "3  hotdogsaremyfavorite   1609280376  kmoe28             0   \n",
+       "4          AcademicCold   1609280082  kmoaor             0   \n",
+       "\n",
+       "                                           permalink  score selftext  \\\n",
+       "0  /r/CoronavirusUS/comments/kmop5o/1st_case_of_c...      1            \n",
+       "1  /r/CoronavirusUS/comments/kmook1/colorado_man_...      1            \n",
+       "2  /r/CoronavirusUS/comments/kmon5m/republicans_i...      1            \n",
+       "3  /r/CoronavirusUS/comments/kmoe28/colorado_man_...      1            \n",
+       "4  /r/CoronavirusUS/comments/kmoaor/coronavirus_u...      1            \n",
+       "\n",
+       "       subreddit                                              title  \\\n",
+       "0  CoronavirusUS   1st case of COVID variant discovered in Colorado   \n",
+       "1  CoronavirusUS  Colorado man tests positive for more contagiou...   \n",
+       "2  CoronavirusUS  Republicans including right-wing Weld county c...   \n",
+       "3  CoronavirusUS  Colorado man tests positive for more contagiou...   \n",
+       "4  CoronavirusUS  Coronavirus UK variant detected in US for 1st ...   \n",
+       "\n",
+       "                                                 url  \\\n",
+       "0  https://www.kfyrtv.com/2020/12/29/1st-case-of-...   \n",
+       "1  https://abc7ny.com/covid-variant-new-uk-elbert...   \n",
+       "2  https://www.denverpost.com/2020/12/28/colorado...   \n",
+       "3  https://coloradosun.com/2020/12/29/coronavirus...   \n",
+       "4  https://abcnews.go.com/Health/coronavirus/live...   \n",
+       "\n",
+       "                                          cleanTitle  \\\n",
+       "0             case covid variant discovered colorado   \n",
+       "1  colorado man tests positive contagious variant...   \n",
+       "2  republicans including right wing weld county c...   \n",
+       "3  colorado man tests positive contagious variant...   \n",
+       "4                  coronavirus variant detected time   \n",
+       "\n",
+       "                                                text  \\\n",
+       "0  1st case of COVID variant discovered in Colorado    \n",
+       "1  Colorado man tests positive for more contagiou...   \n",
+       "2  Republicans including right-wing Weld county c...   \n",
+       "3  Colorado man tests positive for more contagiou...   \n",
+       "4  Coronavirus UK variant detected in US for 1st ...   \n",
+       "\n",
+       "                                           cleanText  class_I    conf_I  \n",
+       "0      [ num]st case covid variant discover colorado      1.0  0.999999  \n",
+       "1  colorado man test positive contagious variant ...      1.0  0.999997  \n",
+       "2  republicans include rightwe weld county commis...      1.0  0.999827  \n",
+       "3  colorado man test positive contagious variant ...      1.0  0.999999  \n",
+       "4        coronavirus uk variant detect [ num]st time      1.0  0.999995  "
+      ]
+     },
+     "execution_count": 79,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df2 = df[df['class_I'] == 1.0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 80,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "covid_rel = df[df['class_I'] == 1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(32487, 15)"
+      ]
+     },
+     "execution_count": 73,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df2.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 81,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(32487, 15)"
+      ]
+     },
+     "execution_count": 81,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "covid_rel.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th>index</th>\n",
+       "      <th>subreddit</th>\n",
+       "      <th>Non-Covid</th>\n",
+       "      <th>Covid</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>CoronavirusUS</td>\n",
+       "      <td>13024</td>\n",
+       "      <td>32487</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "index      subreddit  Non-Covid  Covid\n",
+       "0      CoronavirusUS      13024  32487"
+      ]
+     },
+     "execution_count": 69,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
