rant topic models

--- a/analysis/topic_models.ipynb
+++ b/analysis/topic_models.ipynb
@@ -34,7 +34,7 @@
       "Ivy Default Cache set to: /home/3147567/.ivy2/cache\n",
       "The jars for the packages stored in: /home/3147567/.ivy2/jars\n",
       "com.johnsnowlabs.nlp#spark-nlp_2.12 added as a dependency\n",
-      ":: resolving dependencies :: org.apache.spark#spark-submit-parent-b904c7fb-b336-4e0e-9b95-5310b787e05c;1.0\n",
+      ":: resolving dependencies :: org.apache.spark#spark-submit-parent-861c23af-b57a-4f31-aab2-45083bc344c8;1.0\n",
       "\tconfs: [default]\n",
       "\tfound com.johnsnowlabs.nlp#spark-nlp_2.12;4.1.0 in central\n",
       "\tfound com.typesafe#config;1.4.2 in central\n",
@@ -53,7 +53,7 @@
       "\tfound com.navigamez#greex;1.0 in central\n",
       "\tfound dk.brics.automaton#automaton;1.11-8 in central\n",
       "\tfound com.johnsnowlabs.nlp#tensorflow-cpu_2.12;0.4.3 in central\n",
-      ":: resolution report :: resolve 288ms :: artifacts dl 83ms\n",
+      ":: resolution report :: resolve 367ms :: artifacts dl 81ms\n",
       "\t:: modules in use:\n",
       "\tcom.amazonaws#aws-java-sdk-bundle;1.11.828 from central in [default]\n",
       "\tcom.github.universal-automata#liblevenshtein;3.0.0 from central in [default]\n",
@@ -78,10 +78,10 @@
       "\t---------------------------------------------------------------------\n",
       "\t|      default     |   17  |   0   |   0   |   0   ||   17  |   0   |\n",
       "\t---------------------------------------------------------------------\n",
-      ":: retrieving :: org.apache.spark#spark-submit-parent-b904c7fb-b336-4e0e-9b95-5310b787e05c\n",
+      ":: retrieving :: org.apache.spark#spark-submit-parent-861c23af-b57a-4f31-aab2-45083bc344c8\n",
       "\tconfs: [default]\n",
-      "\t0 artifacts copied, 17 already retrieved (0kB/10ms)\n",
-      "22/09/03 14:23:53 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n",
+      "\t0 artifacts copied, 17 already retrieved (0kB/12ms)\n",
+      "22/10/23 11:26:14 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n",
       "Using Spark's default log4j profile: org/apache/spark/log4j-defaults.properties\n",
       "Setting default log level to \"WARN\".\n",
       "To adjust logging level use sc.setLogLevel(newLevel). For SparkR, use setLogLevel(newLevel).\n"
@@ -120,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -139,27 +139,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "pyspark.sql.dataframe.DataFrame"
+       "1118446"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "type(ProFile)"
+    "ProFile.count()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -170,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -179,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -192,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -201,27 +201,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 155,
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sample_n = NeutralFile.sample(0.1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sample_a = AntiFile.sample(0.5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "1057838"
+       "6525483"
       ]
      },
-     "execution_count": 155,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "sample_n.count()"
+    "sample_a.count()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -234,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -275,36 +293,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
     "# train the pipeline\n",
-    "nlp_model = nlp_pipeline.fit(sample_p)"
+    "nlp_model = nlp_pipeline.fit(sample_a)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
     "# apply the pipeline to transform dataframe.\n",
-    "processed_df  = nlp_model.transform(sample_p)"
+    "processed_df  = nlp_model.transform(sample_a)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 149,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "558582"
+       "6525483"
       ]
      },
-     "execution_count": 149,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -316,7 +334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 150,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -338,22 +356,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 152,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[Stage 495:====================================================>  (20 + 1) / 21]\r"
+      "[Stage 219:======================================================>(95 + 1) / 96]\r"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The lower bound on the log likelihood of the entire corpus: -25437380.973684043\n",
-      "The upper bound on perplexity: 5.620890868953256\n"
+      "The lower bound on the log likelihood of the entire corpus: -193408718.15690762\n",
+      "The upper bound on perplexity: 5.925139698843308\n"
      ]
     },
     {
@@ -377,7 +395,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -386,234 +404,234 @@
      "text": [
       "topic: 0\n",
       "*************************\n",
+      "remove\n",
+      "[NUM]\n",
       "not\n",
-      "people\n",
-      "like\n",
-      "think\n",
-      "bad\n",
-      "thing\n",
-      "time\n",
-      "s\n",
-      "life\n",
-      "want\n",
-      "know\n",
-      "say\n",
+      "new\n",
+      "year\n",
+      "covid\n",
+      "find\n",
+      "gme\n",
       "m\n",
-      "good\n",
-      "feel\n",
-      "well\n",
-      "work\n",
-      "way\n",
-      "person\n",
-      "need\n",
-      "opinion\n",
+      "trump\n",
+      "day\n",
+      "buy\n",
+      "stock\n",
+      "amp\n",
+      "curse\n",
+      "old\n",
       "kid\n",
-      "child\n",
-      "make\n",
-      "world\n",
-      "live\n",
-      "ve\n",
-      "talk\n",
+      "short\n",
+      "death\n",
+      "try\n",
       "go\n",
-      "understand\n",
+      "[num]\n",
+      "call\n",
+      "national\n",
+      "dead\n",
+      "think\n",
+      "late\n",
+      "oh\n",
+      "amc\n",
+      "book\n",
       "*************************\n",
       "topic: 1\n",
       "*************************\n",
+      "good\n",
+      "work\n",
+      "time\n",
+      "not\n",
+      "fuck\n",
+      "job\n",
       "[NUM]\n",
-      "vaccine\n",
-      "covid\n",
-      "test\n",
-      "covid[NUM]\n",
-      "[num]\n",
-      "coronavirus\n",
-      "delete\n",
-      "dose\n",
+      "leave\n",
+      "mask\n",
       "day\n",
-      "covid[num]\n",
-      "gt\n",
-      "vaccinate\n",
-      "week\n",
-      "vaccination\n",
-      "study\n",
-      "case\n",
-      "report\n",
-      "virus\n",
+      "m\n",
+      "take\n",
+      "face\n",
+      "point\n",
+      "pay\n",
+      "today\n",
+      "want\n",
+      "ask\n",
+      "ban\n",
+      "high\n",
+      "people\n",
+      "hour\n",
+      "play\n",
+      "like\n",
+      "s\n",
+      "reddit\n",
+      "wear\n",
+      "find\n",
       "get\n",
-      "positive\n",
-      "testing\n",
-      "pfizer\n",
-      "pillar\n",
-      "month\n",
-      "datum\n",
-      "uk\n",
-      "say\n",
-      "new\n",
-      "death\n",
+      "end\n",
       "*************************\n",
       "topic: 2\n",
       "*************************\n",
-      "[NUM]\n",
       "not\n",
-      "year\n",
-      "like\n",
-      "m\n",
+      "delete\n",
       "people\n",
-      "[num]\n",
-      "good\n",
-      "know\n",
-      "time\n",
+      "post\n",
+      "cum\n",
+      "thing\n",
+      "like\n",
+      "[NUM]\n",
+      "big\n",
       "think\n",
-      "company\n",
-      "man\n",
-      "s\n",
-      "woman\n",
+      "new\n",
       "need\n",
-      "stock\n",
-      "look\n",
+      "comment\n",
+      "m\n",
       "go\n",
-      "high\n",
-      "day\n",
-      "pay\n",
+      "country\n",
+      "make\n",
+      "well\n",
+      "plan\n",
+      "want\n",
       "feel\n",
-      "remove\n",
-      "market\n",
-      "work\n",
       "long\n",
-      "money\n",
-      "ve\n",
-      "job\n",
+      "know\n",
+      "work\n",
+      "question\n",
+      "day\n",
+      "world\n",
+      "time\n",
+      "way\n",
+      "use\n",
       "*************************\n",
       "topic: 3\n",
       "*************************\n",
-      "remove\n",
-      "[url]\n",
-      "help\n",
-      "post\n",
-      "stock\n",
-      "company\n",
-      "short\n",
-      "market\n",
-      "look\n",
-      "[NUM]\n",
-      "thank\n",
-      "ampx[num]b\n",
-      "news\n",
-      "need\n",
-      "money\n",
-      "good\n",
-      "go\n",
-      "china\n",
-      "like\n",
-      "great\n",
-      "[num]\n",
-      "retard\n",
-      "dd\n",
-      "people\n",
-      "price\n",
-      "[num]k\n",
-      "see\n",
+      "trump\n",
       "not\n",
-      "wsb\n",
-      "new\n",
+      "biden\n",
+      "say\n",
+      "m\n",
+      "[url]\n",
+      "state\n",
+      "people\n",
+      "tell\n",
+      "vote\n",
+      "_\n",
+      "[NUM]\n",
+      "want\n",
+      "election\n",
+      "come\n",
+      "think\n",
+      "president\n",
+      "know\n",
+      "time\n",
+      "bill\n",
+      "school\n",
+      "true\n",
+      "use\n",
+      "joe\n",
+      "war\n",
+      "right\n",
+      "love\n",
+      "talk\n",
+      "s\n",
+      "like\n",
       "*************************\n",
       "topic: 4\n",
       "*************************\n",
-      "not\n",
-      "m\n",
       "like\n",
-      "shit\n",
-      "go\n",
-      "know\n",
-      "time\n",
+      "not\n",
       "s\n",
-      "want\n",
-      "get\n",
-      "game\n",
-      "come\n",
-      "good\n",
-      "new\n",
+      "know\n",
+      "man\n",
       "people\n",
+      "go\n",
       "look\n",
-      "ve\n",
-      "try\n",
       "think\n",
-      "feel\n",
-      "play\n",
-      "video\n",
-      "right\n",
-      "find\n",
-      "tell\n",
-      "work\n",
-      "thing\n",
-      "watch\n",
       "guy\n",
-      "day\n",
+      "say\n",
+      "woman\n",
+      "bad\n",
+      "ve\n",
+      "meme\n",
+      "child\n",
+      "way\n",
+      "need\n",
+      "see\n",
+      "family\n",
+      "[NUM]\n",
+      "m\n",
+      "want\n",
+      "thing\n",
+      "life\n",
+      "shit\n",
+      "feel\n",
+      "find\n",
+      "mean\n",
+      "yes\n",
       "*************************\n",
       "topic: 5\n",
       "*************************\n",
-      "remove\n",
-      "good\n",
-      "gme\n",
-      "robinhood\n",
-      "[NUM]\n",
-      "trump\n",
+      "rule\n",
+      "hate\n",
       "not\n",
-      "s\n",
-      "go\n",
-      "hold\n",
+      "vaccine\n",
       "get\n",
-      "biden\n",
-      "new\n",
-      "question\n",
-      "reddit\n",
-      "stock\n",
-      "think\n",
-      "message\n",
-      "m\n",
-      "well\n",
-      "meme\n",
+      "thank\n",
+      "video\n",
+      "china\n",
+      "[NUM]\n",
+      "people\n",
+      "game\n",
+      "life\n",
+      "world\n",
       "like\n",
-      "happen\n",
-      "short\n",
-      "call\n",
-      "know\n",
-      "buy\n",
-      "test\n",
-      "vote\n",
-      "fuck\n",
+      "free\n",
+      "news\n",
+      "[num]\n",
+      "watch\n",
+      "live\n",
+      "covid\n",
+      "russia\n",
+      "help\n",
+      "protest\n",
+      "dog\n",
+      "real\n",
+      "new\n",
+      "fight\n",
+      "m\n",
+      "funny\n",
+      "let\n",
       "*************************\n",
       "topic: 6\n",
       "*************************\n",
-      "buy\n",
-      "gme\n",
       "[NUM]\n",
-      "amc\n",
-      "hold\n",
-      "share\n",
-      "nan\n",
-      "stock\n",
-      "sell\n",
-      "moon\n",
+      "coronavirus\n",
+      "[num]\n",
+      "people\n",
+      "year\n",
+      "police\n",
+      "million\n",
+      "report\n",
+      "case\n",
+      "test\n",
       "not\n",
-      "_\n",
-      "let\n",
-      "price\n",
-      "today\n",
+      "think\n",
+      "market\n",
+      "right\n",
       "day\n",
-      "bb\n",
-      "nok\n",
-      "trading\n",
-      "short\n",
-      "go\n",
-      "robinhood\n",
-      "squeeze\n",
-      "ape\n",
-      "fund\n",
-      "option\n",
-      "delete\n",
-      "hand\n",
-      "dip\n",
-      "time\n",
+      "month\n",
+      "hold\n",
+      "company\n",
+      "house\n",
+      "white\n",
+      "say\n",
+      "covid[NUM]\n",
+      "share\n",
+      "new\n",
+      "home\n",
+      "number\n",
+      "close\n",
+      "de\n",
+      "vs\n",
+      "break\n",
       "*************************\n"
      ]
     }
@@ -637,11 +655,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
-    "model.save('../../Files/models/topic_p_all.pickle')"
+    "model4.save('../../Files/models/topic_a_7.pickle')"
    ]
   },
   {
